# TinyChat

./: CMakeLists.txt
include/glad/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  cmake_install.cmake  glad.sln  glad.vcxproj  glad.vcxproj.filters
include/glad/Debug/: glad.lib
include/glad/glad.dir/Debug/: glad.lib.recipe
include/glad/glad.dir/Debug/glad.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
include/glad/include/glad/: glad.h
include/glad/src/: glad.c
include/glfw/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  GLFW.sln  cmake_install.cmake
include/glfw/src/: cmake_install.cmake  glfw.vcxproj  glfw.vcxproj.filters  glfw3.pc  update_mappings.vcxproj  update_mappings.vcxproj.filters
include/glfw/src/Debug/: glfw3.lib
include/glfw/src/glfw.dir/Debug/glfw.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  (+2 more)
include/imgui/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  cmake_install.cmake  imgui.sln  imgui.vcxproj  imgui.vcxproj.filters
include/imgui/imgui.dir/Debug/imgui.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
include/net/: net.h  net_client.h  net_common.h  net_connection.h  net_message.h  net_server.h  net_tsqueue.h
src/client/: CMakeLists.txt  client.cpp  client.h  main.cpp
src/imguitest/: CMakeLists.txt  main.cpp
src/server/: CMakeLists.txt  TinyServer.cpp
